@@ -35,6 +35,12 @@ struct WPLoggingStack {
 }
 
 struct WPCrashLoggingDataProvider: CrashLoggingDataProvider {
+    private let contextManager: ContextManager
+
+    init(contextManager: ContextManager = .shared) {
+        self.contextManager = contextManager
+    }
+
     let sentryDSN: String = ApiCredentials.sentryDSN
 
     var userHasOptedOut: Bool {
@@ -48,12 +54,11 @@ struct WPCrashLoggingDataProvider: CrashLoggingDataProvider {
     }
 
     var currentUser: TracksUser? {
-        let context = ContextManager.sharedInstance().mainContext
-
-        guard let account = try? WPAccount.lookupDefaultWordPressComAccount(in: context) else {
-            return nil
+        return contextManager.performQuery { context -> TracksUser? in
+            guard let account = try? WPAccount.lookupDefaultWordPressComAccount(in: context) else {
+                return nil
+            }
+            return TracksUser(userID: account.userID.stringValue, email: account.email, username: account.username)
         }
-
-        return TracksUser(userID: account.userID.stringValue, email: account.email, username: account.username)
     }
 }
